--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <body>
-Hello there, awesome person!
-    </html>
-  </body>
+    <head>
+        <title>I am a title!</title>
+    </head>
+
+    <body>
+        HEllo there, awsome person!
+    </body>
+</html>
