--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 
     <body>
         <h1> HEllo there, awsome person!</h1>
+        <img src="https://avatars.githubusercontent.com/u/72680541?v=4">
+
     </body>
 </html>
