--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <body>
         <h1> HEllo there, awsome person!</h1>
         <img src="https://avatars.githubusercontent.com/u/72680541?v=4">
+        <ol>
+            <li>This</li>
+            <li>Is an</li>
+            <li>Ordered list</li>
+        </ol>
 
     </body>
 </html>
