--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -10,9 +11,10 @@
             <li>This</li>
             <li>Is an</li>
             <li>Ordered list</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ol>
   ```
-  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  
   ```
 
     </body>
