--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1> HEllo there, awsome person!</h1>
+        <h1> Hello there, awsome person!</h1>
         <img src="https://avatars.githubusercontent.com/u/72680541?v=4">
         <ol>
             <li>This</li>
